# Sistemas-Embarcados-VD

./: CERTI-master.tar.xz  README.md  hla_ii.tar.xz
hla_ii/teste_comunicacao/: compilar.sh  ii_cpp.sv  ii_h.sv  main.cpp  run
hla_ii/teste_comunicacao/não usa/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
